--- a/app/src/main/res/layout/activity_favorites_page.xml
+++ b/app/src/main/res/layout/activity_favorites_page.xml
@@ -61,22 +61,6 @@
         app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
     <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="361dp"
-        android:layout_height="119dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="218dp"
-        android:layout_marginEnd="82dp"
-        android:layout_marginBottom="599dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/img_shopping_list2" />
-
-    <ImageView
         android:id="@+id/ImgOptionIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -89,77 +73,6 @@
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="@+id/imageView5"
         app:srcCompat="@drawable/image_state_layer" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="219dp"
-        android:layout_marginEnd="216dp"
-        android:layout_marginBottom="691dp"
-        android:text="Collection"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="102dp"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="288dp"
-        android:layout_marginBottom="617dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:srcCompat="@drawable/iv_home_page_rectangle4" />
-
-    <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="286dp"
-        android:layout_marginTop="269dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="616dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:srcCompat="@drawable/iv_home_page_rectangle4" />
-
-    <ImageView
-        android:id="@+id/imageView20"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
-        app:layout_constraintEnd_toStartOf="@+id/textView15"
-        app:layout_constraintStart_toStartOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/imageView16"
-        app:srcCompat="@drawable/container_group" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="85dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="617dp"
-        android:gravity="center"
-        android:text="Meal planner"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView16"
-        app:layout_constraintStart_toEndOf="@+id/imageView20"
-        app:layout_constraintTop_toTopOf="@+id/imageView16" />
 
     <ImageView
         android:id="@+id/imageView22"
@@ -177,50 +90,35 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/image2" />
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="100dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="252dp"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="618dp"
-        android:gravity="center"
-        android:text="Recently viewed"
-        android:textSize="13sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
-
     <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="361dp"
-        android:layout_height="332dp"
+        android:layout_width="334dp"
+        android:layout_height="525dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="378dp"
+        android:layout_marginTop="206dp"
         android:layout_marginEnd="79dp"
         android:layout_marginBottom="227dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@drawable/img_shopping_list2" />
 
     <TextView
         android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="394dp"
-        android:layout_marginEnd="175dp"
-        android:layout_marginBottom="516dp"
-        android:text="Favrourited recipes"
+        android:layout_width="84dp"
+        android:layout_height="28dp"
+        android:text="Favorites"
+        android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView23"
+        app:layout_constraintVertical_bias="0.028" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -234,5 +132,14 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="309dp"
+        android:layout_height="457dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
+        app:layout_constraintEnd_toEndOf="@+id/imageView23"
+        app:layout_constraintStart_toStartOf="@+id/imageView23"
+        app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
