--- a/app/src/main/res/layout/recipe_view_item.xml
+++ b/app/src/main/res/layout/recipe_view_item.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+    android:clickable="true"
+    android:focusable="true"  >
 
 <LinearLayout
 android:layout_width="match_parent"
@@ -13,7 +15,7 @@ android:layout_height="wrap_content"
 android:orientation="vertical"
 android:padding="8dp">
 
-<!-- Recipe Title -->
+
 <TextView
     android:id="@+id/tv_recipe_title"
     android:layout_width="wrap_content"
@@ -23,7 +25,7 @@ android:padding="8dp">
     android:textStyle="bold"
     android:textColor="@android:color/black" />
 
-<!-- Recipe Description -->
+
 <TextView
     android:id="@+id/tv_recipe_description"
     android:layout_width="wrap_content"
