--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,60 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Search Bar -->
-    <EditText
-        android:id="@+id/et_search"
-        android:layout_width="284dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/iv_home_page_rectangle2"
-        android:hint="Search for Recipes"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:padding="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Search Button -->
-    <Button
-        android:id="@+id/btn_search"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="Search"
-        app:layout_constraintStart_toEndOf="@id/et_search"
+    <ImageView
+
+        android:id="@+id/imageView10"
+
+        android:layout_width="435dp"
+
+        android:layout_height="176dp"
+
+        android:scaleType="centerCrop"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_search"
-        app:layout_constraintBottom_toBottomOf="@id/et_search" />
 
-    <!-- Button for Filter Pop-up -->
-    <Button
-        android:id="@+id/btn_show_filters"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Filter"
-        app:layout_constraintTop_toBottomOf="@id/et_search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:srcCompat="@drawable/iv_home_page_image" />
+
+
+    <ImageView
+
+        android:id="@+id/iv_home_page_rectangle4"
+
+        android:layout_width="379dp"
+
+        android:layout_height="62dp"
+
+        android:layout_marginTop="48dp"
+
+        android:layout_marginEnd="14dp"
+
+        android:layout_marginBottom="47dp"
+
+        android:background="@drawable/iv_home_page_rectangle4"
+
+        android:scaleType="centerInside"
+
+        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+
+        app:layout_constraintEnd_toEndOf="@+id/imageView10"
+
+        app:layout_constraintTop_toTopOf="@+id/imageView10" />
+
+
+    <EditText
+
+        android:id="@+id/et_search"
+
+        android:layout_width="294dp"
+
+        android:layout_height="45dp"
+
+        android:layout_gravity="center_vertical"
+
+        android:layout_marginStart="33dp"
+
+        android:layout_marginTop="9dp"
+
+        android:layout_marginBottom="8dp"
+
+        android:background="@android:color/transparent"
+
+        android:hint="Search for Recipes"
+
+        android:imeOptions="actionSearch"
+
+        android:inputType="text"
+
+        android:padding="12dp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/iv_home_page_rectangle4"
+
+        app:layout_constraintStart_toStartOf="@+id/imageView10"
+
+        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4" />
+
+
+    <ImageButton
+
+        android:id="@+id/btn_search"
+
+        android:layout_width="45dp"
+
+        android:layout_height="45dp"
+
+        android:layout_marginTop="9dp"
+
+        android:layout_marginEnd="12dp"
+
+        android:layout_marginBottom="8dp"
+
+        android:background="@android:drawable/ic_search_category_default"
+
+        android:contentDescription="Search Button"
+
+        app:layout_constraintBottom_toBottomOf="@+id/iv_home_page_rectangle4"
+
+        app:layout_constraintEnd_toEndOf="@+id/iv_home_page_rectangle4"
+
+        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4" />
+
 
     <!-- Scrollable Filter Section (Initially Hidden) -->
+
+
+    <!-- Scrollable Filter Section (Initially Hidden) -->
+
+    <Button
+
+        android:id="@+id/btn_show_filters"
+
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="164dp"
+
+        android:layout_marginTop="108dp"
+
+        android:layout_marginBottom="575dp"
+
+        android:text="Filter"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="@+id/imageView10"
+        app:layout_constraintVertical_bias="1.0" />
+
     <ScrollView
         android:id="@+id/filterScrollView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/btn_show_filters"
         app:layout_constraintBottom_toTopOf="@id/rv_search_results"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.3">
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_show_filters">
 
         <!-- ScrollView content -->
         <LinearLayout
@@ -64,22 +155,22 @@
             android:orientation="vertical"
             android:padding="16dp">
 
+            <!-- Calories Filter Section -->
             <TextView
                 android:id="@+id/filterLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="Apply a filter"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp" />
+                android:textStyle="bold" />
 
-            <!-- Calories Filter -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
                 android:text="Calories"
-                android:textStyle="bold"
-                android:layout_marginBottom="4dp" />
+                android:textStyle="bold" />
 
             <RadioGroup
                 android:id="@+id/radioGroupCalories"
@@ -115,10 +206,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Type of meal"
-                android:textStyle="bold"
                 android:layout_marginTop="12dp"
-                android:layout_marginBottom="4dp" />
+                android:layout_marginBottom="4dp"
+                android:text="Type of meal"
+                android:textStyle="bold" />
 
             <RadioGroup
                 android:id="@+id/radioGroupMealType"
@@ -148,10 +239,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Main ingredient"
-                android:textStyle="bold"
                 android:layout_marginTop="12dp"
-                android:layout_marginBottom="4dp" />
+                android:layout_marginBottom="4dp"
+                android:text="Main ingredient"
+                android:textStyle="bold" />
 
             <RadioGroup
                 android:id="@+id/radioGroupIngredients"
@@ -193,9 +284,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:layout_marginTop="16dp">
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/btn_clear_filters"
@@ -208,26 +299,28 @@
     </ScrollView>
 
     <!-- RecyclerView for Search Results -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_search_results"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/filterScrollView"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Bottom Navigation -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_search_results"
+        android:layout_width="410dp"
+        android:layout_height="465dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="88dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
