--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -163,6 +163,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.405" />
 
+
+    <CheckBox
+        android:id="@+id/checkbox_remember_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Remember Me"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/txtLPassword"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/txtLPassword"
+        app:layout_constraintTop_toBottomOf="@+id/txtLPassword" />
+
     <Button
         android:id="@+id/btnLoginPage"
         android:layout_width="130dp"
