--- a/app/src/main/res/layout/activity_shopping_list_page.xml
+++ b/app/src/main/res/layout/activity_shopping_list_page.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,97 +8,88 @@
     android:background="@drawable/img_shopping_list1"
     tools:context=".ShoppingListPage">
 
-    <!-- Header Bar with Title -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="16dp">
+    <!-- Header Bar with Title and Add Button at the top -->
+<androidx.constraintlayout.widget.ConstraintLayout
+android:id="@+id/header"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="16dp"
+android:padding="16dp"
+app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Title -->
-        <TextView
-            android:id="@+id/txt_shopping_list_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="108dp"
-            android:text="Shopping list"
-            android:textColor="@android:color/black"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!-- Title aligned to the start (left) -->
+<TextView
+    android:id="@+id/txt_shopping_list_title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Shopping list"
+    android:textColor="@android:color/black"
+    android:textSize="24sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- Add to Shopping List Button -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/add_to_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+<!-- Add Icon aligned to the right (end) -->
+<ImageView
+    android:id="@+id/add_to_list_icon"
+    android:layout_width="25dp"
+    android:layout_height="25dp"
+    android:contentDescription="Add to List"
+    android:src="@drawable/ic_plus_square"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent" />
 
-        <!-- Add Icon -->
-        <ImageView
-            android:id="@+id/add_to_list_icon"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:contentDescription="Add to List"
-            android:src="@drawable/ic_plus_square"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+<!-- Add to Shopping List Text next to Add Icon -->
+<TextView
+    android:id="@+id/txt_add_to_shopping_list"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="10dp"
+    android:text="Add to shopping list"
+    android:textSize="16sp"
+    android:textColor="@android:color/black"
+    app:layout_constraintStart_toEndOf="@+id/add_to_list_icon"
+    app:layout_constraintTop_toTopOf="@+id/add_to_list_icon"
+    app:layout_constraintBottom_toBottomOf="@+id/add_to_list_icon" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- Add to Shopping List Text -->
-        <TextView
-            android:id="@+id/txt_add_to_shopping_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Add to shopping list"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
-            app:layout_constraintStart_toEndOf="@+id/add_to_list_icon"
-            app:layout_constraintTop_toTopOf="@+id/add_to_list_icon" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Scrollable Shopping List Categories (now positioned at the top of the scroll view) -->
+<androidx.core.widget.NestedScrollView
+android:id="@+id/scrollView_shopping_list"
+android:layout_width="match_parent"
+android:layout_height="0dp"
+app:layout_constraintTop_toBottomOf="@id/header"
+app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent">
 
-    <!-- Scrollable Shopping List Categories -->
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollView_shopping_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/add_to_list_container"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
-            android:id="@+id/linearLayout_shopping_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp" />
-    </androidx.core.widget.NestedScrollView>
+<LinearLayout
+    android:id="@+id/linearLayout_shopping_list"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:layout_gravity="top"
+    android:layout_margin="8dp"
+    android:divider="?android:attr/dividerHorizontal"
+    android:dividerPadding="16dp"
+    android:showDividers="middle"
+    android:elevation="6dp"
+    android:background="@drawable/shopping_list_background" />
+</androidx.core.widget.NestedScrollView>
 
     <!-- Bottom Navigation View -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav" />
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/bottomNavigationView"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginBottom="4dp"
+app:labelVisibilityMode="unlabeled"
+app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintHorizontal_bias="0.0"
+app:layout_constraintStart_toStartOf="parent"
+app:menu="@menu/bottom_nav" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
