--- a/app/src/main/res/layout/activity_shopping_list_page.xml
+++ b/app/src/main/res/layout/activity_shopping_list_page.xml
@@ -5,8 +5,7 @@
     android:id="@+id/constraintLayout_shopping_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_shopping_list1"
-    tools:context=".ShoppingListPage">
+    android:background="@drawable/img_shopping_list1">
 
     <!-- Header Bar with Title and Add Button at the top -->
 <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,18 +39,7 @@ app:layout_constraintTop_toTopOf="parent">
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent" />
 
-<!-- Add to Shopping List Text next to Add Icon -->
-<TextView
-    android:id="@+id/txt_add_to_shopping_list"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:text="Add to shopping list"
-    android:textSize="16sp"
-    android:textColor="@android:color/black"
-    app:layout_constraintStart_toEndOf="@+id/add_to_list_icon"
-    app:layout_constraintTop_toTopOf="@+id/add_to_list_icon"
-    app:layout_constraintBottom_toBottomOf="@+id/add_to_list_icon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Scrollable Shopping List Categories (now positioned at the top of the scroll view) -->
