--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- res/values/colors.xml -->
 <resources>
-    <!-- Define your blue colors -->
-    <!-- <color name="colorPrimary">#1976D2</color> -->              <!-- Primary Blue -->
-    <!-- <color name="colorPrimaryVariant">#1565C0</color> -->       <!-- Darker variant of blue -->
-    <!-- <color name="colorSecondary">#2196F3</color> -->            <!-- Accent Blue -->
-    <!-- Update other UI colors if necessary -->
+    <!-- Primary brand colors -->
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorAccent">#C0CA33</color>
+
+    <!-- Additional colors -->
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
+    <color name="overlayColor">#B3000000</color>
+
+    <!-- TextInputLayout hint and stroke colors -->
+    <color name="colorHint">#8BC34A</color>
 </resources>
