--- a/app/src/main/res/layout/activity_recipe_overview.xml
+++ b/app/src/main/res/layout/activity_recipe_overview.xml
@@ -44,6 +44,7 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:layout_constraintTop_toBottomOf="@id/view_pager" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_pager"
+        app:tabMode="fixed" />
 </androidx.constraintlayout.widget.ConstraintLayout>
