--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -3,66 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
+    android:foregroundTint="#FFFFFF">
 
 
     <ImageView
 
         android:id="@+id/imageView10"
 
-        android:layout_width="393dp"
+        android:layout_width="396dp"
 
-        android:layout_height="177dp"
+        android:layout_height="159dp"
 
         android:scaleType="centerCrop"
 
         app:layout_constraintEnd_toEndOf="parent"
-
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent"
-
         app:srcCompat="@drawable/iv_home_page_image" />
 
     <ImageView
 
         android:id="@+id/iv_home_page_rectangle4"
 
-        android:layout_width="379dp"
+        android:layout_width="360dp"
 
-        android:layout_height="62dp"
+        android:layout_height="63dp"
 
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="17dp"
 
-        android:layout_marginEnd="14dp"
-
-        android:layout_marginBottom="47dp"
+        android:layout_marginTop="27dp"
 
         android:background="@drawable/iv_home_page_rectangle4"
-
         android:scaleType="centerInside"
-
-        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-
-        app:layout_constraintEnd_toEndOf="@+id/imageView10"
-
-        app:layout_constraintTop_toTopOf="@+id/imageView10" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
 
         android:id="@+id/et_search"
 
-        android:layout_width="294dp"
+        android:layout_width="202dp"
 
-        android:layout_height="45dp"
+        android:layout_height="49dp"
 
         android:layout_gravity="center_vertical"
 
-        android:layout_marginStart="33dp"
+        android:layout_marginStart="92dp"
 
-        android:layout_marginTop="9dp"
-
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="32dp"
 
         android:background="@android:color/transparent"
 
@@ -71,13 +63,9 @@
         android:imeOptions="actionSearch"
 
         android:inputType="text"
-
         android:padding="12dp"
-
-        app:layout_constraintBottom_toBottomOf="@+id/iv_home_page_rectangle4"
-
-        app:layout_constraintStart_toStartOf="@+id/imageView10"
-        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
 
@@ -101,21 +89,25 @@
 
         app:layout_constraintEnd_toEndOf="@+id/iv_home_page_rectangle4"
 
-        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4" />
+        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_search_results"
-        android:layout_width="389dp"
-        android:layout_height="516dp"
+        android:layout_width="393dp"
+        android:layout_height="571dp"
         android:layout_marginTop="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:backgroundTint="#FFFFFF"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,28 +116,17 @@
 
     <!-- Scrollable Filter Section (Initially Hidden) -->
 
-    <Button
-
+    <ImageButton
         android:id="@+id/btn_show_filters"
-
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-
-        android:layout_marginStart="168dp"
-
-        android:layout_marginTop="108dp"
-
-        android:layout_marginBottom="575dp"
-
-        android:text="Filter"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-
+        android:layout_width="60dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="34dp"
+        android:background="@drawable/image_state_layer"
+        android:contentDescription="Filter Button"
         app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="@+id/imageView10"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <ScrollView
         android:id="@+id/filterScrollView"
@@ -326,6 +307,17 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="403dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="104dp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_search_results"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_rectangle2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
