--- a/app/src/main/res/layout/activity_meal_planner_meal.xml
+++ b/app/src/main/res/layout/activity_meal_planner_meal.xml
@@ -86,6 +86,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
+        app:backgroundTint="#FFFFFF"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
