--- a/app/src/main/res/layout/activity_shopping_list_page.xml
+++ b/app/src/main/res/layout/activity_shopping_list_page.xml
@@ -73,7 +73,8 @@ android:id="@+id/bottomNavigationView"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_marginBottom="4dp"
-app:labelVisibilityMode="unlabeled"
+    app:backgroundTint="#FFFFFF"
+    app:labelVisibilityMode="unlabeled"
 app:layout_constraintBottom_toBottomOf="parent"
 app:layout_constraintEnd_toEndOf="parent"
 app:layout_constraintHorizontal_bias="0.0"
