--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorSecondary">@color/colorSecondary</item>
         -->
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="Theme.CodiaDemo" parent="Base.Theme.CodiaDemo" />
