--- a/app/src/main/res/layout/activity_favorites_page.xml
+++ b/app/src/main/res/layout/activity_favorites_page.xml
@@ -5,117 +5,112 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".FavoritesPage">
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="520dp"
-        android:layout_height="936dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView10"
+        android:layout_width="409dp"
+        android:layout_height="155dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503"
-        app:srcCompat="@drawable/img_shopping_list1" />
+        app:srcCompat="@drawable/iv_home_page_image" />
 
     <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="357dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="117dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="759dp"
-        android:background="@drawable/img_shopping_list2"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+        android:id="@+id/iv_home_page_rectangle4"
+        android:layout_width="360dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_rectangle4" />
+
+
+    <EditText
+        android:id="@+id/et_search"
+        android:layout_width="219dp"
+        android:layout_height="51dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="32dp"
+        android:background="@android:color/transparent"
+        android:hint="Search for Recipes"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/Img_search"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="397dp"
-        android:layout_marginTop="127dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="769dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        android:layout_marginStart="320dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/image_state_layer2" />
-
-    <TextView
-        android:id="@+id/txtSearchRecipe"
-        android:layout_width="277dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="126dp"
-        android:layout_marginBottom="771dp"
-        android:gravity="center"
-        android:text="Search for recipes"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toStartOf="@+id/Img_search"
-        app:layout_constraintStart_toEndOf="@+id/ImgOptionIcon"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
     <ImageView
         android:id="@+id/ImgOptionIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="127dp"
-        android:layout_marginEnd="400dp"
-        android:layout_marginBottom="769dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/image_state_layer" />
-
 
 
     <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="334dp"
-        android:layout_height="525dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginBottom="227dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@drawable/img_shopping_list2" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="84dp"
-        android:layout_height="28dp"
-        android:text="Favorites"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:layout_width="386dp"
+        android:layout_height="548dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="175dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView23"
-        app:layout_constraintVertical_bias="0.028" />
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/img_shopping_list2" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="309dp"
-        android:layout_height="457dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
-        app:layout_constraintEnd_toEndOf="@+id/imageView23"
-        app:layout_constraintStart_toStartOf="@+id/imageView23"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        android:layout_width="375dp"
+        android:layout_height="533dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="184dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="403dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_rectangle2" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="134dp"
+        android:text="Favorite recipes"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -125,8 +120,8 @@
         app:backgroundTint="#FFFFFF"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
